Rename new components gallery-modal, table-row-xl, mobile-carousel

--- a/help/help.html
+++ b/help/help.html
@@ -2019,7 +2019,7 @@
                                                         <button
                                                           aria-label="Previous"
                                                           type="button"
-                                                          class="_1ue05kx"
+                                                          class="mobile-carousel__btn"
                                                         >
                                                           <span class="relative"
                                                             ><span
