--- a/landing-pages/full-screen-hero.html
+++ b/landing-pages/full-screen-hero.html
@@ -1693,13 +1693,13 @@
                                         <div class="_1pk994">
                                           <div class="_1xtc178">
                                             <div
-                                              class="_1mx6kqf"
+                                              class="mobile-carousel"
                                               style="
                                                 background: transparent;
                                                 --dls-basecard-padding-top: 100%;
                                               "
                                             >
-                                              <div class="_1szwzht">
+                                              <div class="mobile-carousel__wrapper">
                                                 <div
                                                   class="img-middle"
                                                   style="
