--- a/landing-pages/social-impact-host.html
+++ b/landing-pages/social-impact-host.html
@@ -314,7 +314,7 @@
                                       <div class="_1yqb6qz2"></div>
                                       <div class="_1xtc178">
                                         <div
-                                          class="_1mx6kqf"
+                                          class="mobile-carousel"
                                           style="
                                             background: transparent;
                                             --dls-basecard-padding-top: 100%;
@@ -479,7 +479,7 @@
                                             style="height: 100%; width: 100%"
                                           >
                                             <div
-                                              class="_1mx6kqf"
+                                              class="mobile-carousel"
                                               style="
                                                 background: transparent;
                                                 --dls-basecard-padding-top: 100%;
@@ -701,7 +701,7 @@ Cape Town, South Africa"
                                             style="height: 100%; width: 100%"
                                           >
                                             <div
-                                              class="_1mx6kqf"
+                                              class="mobile-carousel"
                                               style="
                                                 background: transparent;
                                                 --dls-basecard-padding-top: 100%;
@@ -854,7 +854,7 @@ Rome, Italy"
                                             style="height: 100%; width: 100%"
                                           >
                                             <div
-                                              class="_1mx6kqf"
+                                              class="mobile-carousel"
                                               style="
                                                 background: transparent;
                                                 --dls-basecard-padding-top: 100%;
@@ -1072,7 +1072,7 @@ Harlem, New York City"
                                             style="height: 100%; width: 100%"
                                           >
                                             <div
-                                              class="_1mx6kqf"
+                                              class="mobile-carousel"
                                               style="
                                                 background: transparent;
                                                 --dls-basecard-padding-top: 100%;
@@ -1613,7 +1613,7 @@ Harlem, New York City"
                                       <div class="_1yqb6qz2"></div>
                                       <div class="_1xtc178">
                                         <div
-                                          class="_1mx6kqf"
+                                          class="mobile-carousel"
                                           style="
                                             background: transparent;
                                             --dls-basecard-padding-top: 100%;
