--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -849,7 +849,7 @@
                         <div class="_17235gdu"></div>
                         <div class="_17erhr0e">
                           <div class="flex-items-center">
-                            <div class="inline-block" style="margin-left: 15px;"> <button data-button="mute" id='muteButton2' type="button" class="_1rp5252"
+                            <div class="inline-block" style="margin-left: 15px;"> <button data-button="mute" id='muteButton2' type="button" class="gallery-modal__close"
                                 aria-busy="false" style="padding: 12px; margin: -12px;"><svg id='muteButtonIcon2' viewBox="0 0 18 14"
                                   role="img" aria-hidden="false" aria-label="Unmute" focusable="false"
                                   style="height: 18px; width: 18px; display: block; fill: white;">
@@ -859,7 +859,7 @@
                                 </svg>
                                 <svg id='unmuteButtonIcon2' viewBox="0 0 18 14" role="img" aria-hidden="true" aria-label="Mute" focusable="false" style="height: 18px; width: 18px; display: none; fill: white;"><path d="m3.2 4.04h-2.23c-.55 0-.97.44-.97.98v3.96c0 .53.44.98.97.98h2.23l4.32 3.67c.81.69 1.48.38 1.48-.71v-11.85c0-1.08-.66-1.4-1.48-.71l-4.32 3.67zm8.45-.18c.86.83 1.35 1.95 1.35 3.14s-.49 2.31-1.35 3.14c-.2.19-.2.51-.01.71s.51.2.71.01c1.05-1.02 1.65-2.39 1.65-3.86s-.6-2.84-1.65-3.86c-.2-.19-.52-.19-.71.01s-.19.52.01.71zm2.51-2.99c1.8 1.62 2.83 3.8 2.83 6.13s-1.03 4.51-2.83 6.13c-.21.18-.22.5-.04.71s.5.22.71.04c2.01-1.81 3.17-4.26 3.17-6.87 0-2.62-1.16-5.07-3.17-6.87-.21-.18-.52-.17-.71.04-.18.21-.17.52.04.71z" fill-rule="evenodd"></path></svg>
                               </button></div>
-                            <div class="inline-block" style="margin-left: 30px;"> <button data-button="play" id='playButton2' type="button" class="_1rp5252"
+                            <div class="inline-block" style="margin-left: 30px;"> <button data-button="play" id='playButton2' type="button" class="gallery-modal__close"
                                 aria-busy="false" style="padding: 12px; margin: -12px;"><svg id='playButtonIcon2' viewBox="0 0 11 14"
                                   role="img" aria-hidden="true" aria-label="Play" focusable="false"
                                   style="height: 15px; width: 15px; display: none; fill: white;">
@@ -869,7 +869,7 @@
                                 </svg>
                                 <svg id='pauseButtonIcon2' viewBox="0 0 11 14" role="img" aria-hidden="true" aria-label="Pause" focusable="false" style="height: 15px; width: 15px; display: block; fill: white;"><path d="m0 1.01c0-.56.44-1.01 1.01-1.01h1.98c.56 0 1.01.45 1.01 1.01v11.98c0 .56-.44 1.01-1.01 1.01h-1.98c-.56 0-1.01-.45-1.01-1.01zm7 0c0-.56.44-1.01 1.01-1.01h1.98c.56 0 1.01.45 1.01 1.01v11.98c0 .56-.44 1.01-1.01 1.01h-1.98c-.56 0-1.01-.45-1.01-1.01z" fill-rule="evenodd"></path></svg>
                               </button></div>
-                            <div class="inline-block" style="margin-left: 30px;"> <button data-button="full-screen" id='fullScreenButton2' type="button" class="_1rp5252"
+                            <div class="inline-block" style="margin-left: 30px;"> <button data-button="full-screen" id='fullScreenButton2' type="button" class="gallery-modal__close"
                                 aria-busy="false" style="padding: 12px; margin: -12px;"><svg viewBox="0 0 18 18"
                                   role="img" aria-hidden="false" aria-label="Full screen" focusable="false"
                                   style="height: 15px; width: 15px; display: block; fill: white;">
@@ -1781,7 +1781,7 @@
                                                       "
                                                     >
                                                       <ul
-                                                        class="_rxz20bq hidden-scrollbar"
+                                                        class="mobile-carousel__slide-wrapper hidden-scrollbar"
                                                         style="
                                                           margin-left: -6px;
                                                           margin-right: -6px;
@@ -2467,7 +2467,7 @@
           style="--carousel-wrapper-margin: 0px"
         >
           <ul
-            class="_rxz20bq"
+            class="mobile-carousel__slide-wrapper"
             style="margin-left: -8px; margin-right: -8px; scroll-padding: 24px"
           >
             <div aria-hidden="true" style="flex: 0 0 24px" class="hidden block-md"></div>
@@ -11329,8 +11329,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_cpakol">
-                              <div class="_14x8wq27">
-                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
+                              <div class="mobile-carousel__controls">
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                                       viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                                       style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
                                       <g fill="none">
@@ -11339,7 +11339,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                         </path>
                                       </g>
                                     </svg></span></button></div>
-                                <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Next" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11443,8 +11443,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_cpakol">
-                              <div class="_14x8wq27">
-                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                              <div class="mobile-carousel__controls">
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11455,7 +11455,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           </path>
                                         </g>
                                       </svg></span></button></div>
-                                <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Next" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11560,8 +11560,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_cpakol">
-                              <div class="_14x8wq27">
-                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                              <div class="mobile-carousel__controls">
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11572,7 +11572,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           </path>
                                         </g>
                                       </svg></span></button></div>
-                                <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Next" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11677,8 +11677,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_cpakol">
-                              <div class="_14x8wq27">
-                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                              <div class="mobile-carousel__controls">
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11689,7 +11689,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           </path>
                                         </g>
                                       </svg></span></button></div>
-                                <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Next" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11794,8 +11794,8 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                               </div>
                             </div>
                             <div class="_cpakol">
-                              <div class="_14x8wq27">
-                                <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                              <div class="mobile-carousel__controls">
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
@@ -11806,7 +11806,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                           </path>
                                         </g>
                                       </svg></span></button></div>
-                                <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
+                                <div class="mobile-carousel__btn-wrapper"><button aria-label="Next" type="button" class="_1lotlmr"><span
                                       class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                                         xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
                                         focusable="false"
