--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -233,7 +233,7 @@
                                       <div data-plugin-in-point-id="HERO_DEFAULT" data-section-id="HERO_DEFAULT">
                                         <div class="page-shell-mobile__container">
                                           <div class="image-container">
-                                            <ul class="_rxz20bq hidden-scrollbar" style="
+                                            <ul class="mobile-carousel__slide-wrapper hidden-scrollbar" style="
                                                                   margin-left: 0px;
                                                                   margin-right: 0px;
                                                                 ">
@@ -3273,7 +3273,7 @@
                                                   <div class="cob9xum czbu900 dir dir-ltr" style="
                                                                         --carousel-wrapper-margin: 0px;
                                                                       ">
-                                                    <ul class="_rxz20bq hidden-scrollbar" style="
+                                                    <ul class="mobile-carousel__slide-wrapper hidden-scrollbar" style="
                                                                           margin-left: -6px;
                                                                           margin-right: -6px;
                                                                           scroll-padding: 24px;
@@ -18846,7 +18846,7 @@
                 </div>
                 <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                   <div class="image-container">
-                    <ul class="_rxz20bq" style="margin-left: -5px; margin-right: -5px">
+                    <ul class="mobile-carousel__slide-wrapper" style="margin-left: -5px; margin-right: -5px">
                       <li aria-hidden="false" data-key="783219838" class="carousel-slider__item"
                         style="border-width: 0px 5px">
                         <div data-key="783219838" class="h-full">
@@ -23972,8 +23972,8 @@
                     </div>
                   </div>
                   <div class="_cpakol">
-                    <div class="_14x8wq27">
-                      <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                    <div class="mobile-carousel__controls">
+                      <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                             class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                               role="presentation" focusable="false"
@@ -23984,7 +23984,7 @@
                                 </path>
                               </g>
                             </svg></span></button></div>
-                      <div class="_1lyyzem">
+                      <div class="mobile-carousel__btn-wrapper">
                         <button aria-label="Next" type="button" class="_1lotlmr">
                           <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -24150,8 +24150,8 @@
                     </div>
                   </div>
                   <div class="_cpakol">
-                    <div class="_14x8wq27">
-                      <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                    <div class="mobile-carousel__controls">
+                      <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                             class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                               role="presentation" focusable="false"
@@ -24162,7 +24162,7 @@
                                 </path>
                               </g>
                             </svg></span></button></div>
-                      <div class="_1lyyzem">
+                      <div class="mobile-carousel__btn-wrapper">
                         <button aria-label="Next" type="button" class="_1lotlmr">
                           <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -24328,8 +24328,8 @@
                     </div>
                   </div>
                   <div class="_cpakol">
-                    <div class="_14x8wq27">
-                      <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                    <div class="mobile-carousel__controls">
+                      <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                             class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                               role="presentation" focusable="false"
@@ -24340,7 +24340,7 @@
                                 </path>
                               </g>
                             </svg></span></button></div>
-                      <div class="_1lyyzem">
+                      <div class="mobile-carousel__btn-wrapper">
                         <button aria-label="Next" type="button" class="_1lotlmr">
                           <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -24506,8 +24506,8 @@
                     </div>
                   </div>
                   <div class="_cpakol">
-                    <div class="_14x8wq27">
-                      <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                    <div class="mobile-carousel__controls">
+                      <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                             class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                               role="presentation" focusable="false"
@@ -24518,7 +24518,7 @@
                                 </path>
                               </g>
                             </svg></span></button></div>
-                      <div class="_1lyyzem">
+                      <div class="mobile-carousel__btn-wrapper">
                         <button aria-label="Next" type="button" class="_1lotlmr">
                           <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -24684,8 +24684,8 @@
                     </div>
                   </div>
                   <div class="_cpakol">
-                    <div class="_14x8wq27">
-                      <div class="_1lyyzem"><button aria-label="Previous" type="button" class="_1lotlmr"><span
+                    <div class="mobile-carousel__controls">
+                      <div class="mobile-carousel__btn-wrapper"><button aria-label="Previous" type="button" class="_1lotlmr"><span
                             class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                               role="presentation" focusable="false"
@@ -24696,7 +24696,7 @@
                                 </path>
                               </g>
                             </svg></span></button></div>
-                      <div class="_1lyyzem">
+                      <div class="mobile-carousel__btn-wrapper">
                         <button aria-label="Next" type="button" class="_1lotlmr">
                           <span class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg
                               viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
@@ -25147,7 +25147,7 @@
                                       </button>
                                     </div>
                                     <div class="img-container">
-                                      <ul aria-label="9 double bedroom luxury villa with infinity pool" class="_rxz20bq"
+                                      <ul aria-label="9 double bedroom luxury villa with infinity pool" class="mobile-carousel__slide-wrapper"
                                         style="
                                             margin-left: 0px;
                                             margin-right: 0px;
