--- a/listings-product/specific_trip.html
+++ b/listings-product/specific_trip.html
@@ -247,7 +247,7 @@
                                                     >
                                                       <div class="image-container">
                                                         <ul
-                                                          class="_rxz20bq"
+                                                          class="mobile-carousel__slide-wrapper"
                                                           style="
                                                             margin-left: 0px;
                                                             margin-right: 0px;
@@ -652,10 +652,10 @@
                                                               class="flex-content-between"
                                                             >
                                                               <div
-                                                                class="_1lyyzem"
+                                                                class="mobile-carousel__btn-wrapper"
                                                                 style="opacity: 0"
                                                               >
-                                                                <button aria-label="Previous" type="button" class="_1ue05kx">
+                                                                <button aria-label="Previous" type="button" class="mobile-carousel__btn">
                                                                   <span class="relative"
                                                                     ><span class="new-arrow-underscore">_</span
                                                                     ><svg
@@ -683,12 +683,12 @@
                                                                 </button>
                                                             </div>
                                                               <div
-                                                                class="_1lyyzem"
+                                                                class="mobile-carousel__btn-wrapper"
                                                               >
                                                                 <button
                                                                   aria-label="Next"
                                                                   type="button"
-                                                                  class="_1ue05kx"
+                                                                  class="mobile-carousel__btn"
                                                                 >
                                                                   <span
                                                                     class="relative"
