--- a/loaders/products-loader.html
+++ b/loaders/products-loader.html
@@ -271,7 +271,7 @@
                                           >
                                             <div class="image-container">
                                               <ul
-                                                class="_rxz20bq hidden-scrollbar"
+                                                class="mobile-carousel__slide-wrapper hidden-scrollbar"
                                                 style="
                                                   margin-left: 0px;
                                                   margin-right: 0px;
@@ -6581,7 +6581,7 @@
               </div>
               <div data-testid="photo-viewer-slideshow" class="_1kpe7lgb">
                 <div class="image-container">
-                  <ul class="_rxz20bq" style="margin-left: -5px; margin-right: -5px;">
+                  <ul class="mobile-carousel__slide-wrapper" style="margin-left: -5px; margin-right: -5px;">
                     <li aria-hidden="false" data-key="783219838" class="carousel-slider__item" style="border-width: 0px 5px;">
                       <div data-key="783219838" class="h-full">
                         <div class="_onta11">
@@ -8287,9 +8287,9 @@
                   </div>
                 </div>
                 <div class="_cpakol">
-                  <div class="_14x8wq27">
-                    <div class="_1lyyzem"></div>
-                    <div class="_1lyyzem"><button aria-label="Next" type="button" class="_1lotlmr"><span
+                  <div class="mobile-carousel__controls">
+                    <div class="mobile-carousel__btn-wrapper"></div>
+                    <div class="mobile-carousel__btn-wrapper"><button aria-label="Next" type="button" class="_1lotlmr"><span
                           class="relative"><span class="carousel-slider__nav-icon-spacer">_</span><svg viewBox="0 0 32 32"
                             xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false"
                             style="display: block; fill: none; height: 12px; width: 12px; stroke: currentcolor; stroke-width: 5.33333; overflow: visible;">
