--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -3890,7 +3890,7 @@
                                           <div class="_1579s7gv">Unavailable</div>
                                         </div>
                                       </div>
-                                      <div class="_1mx6kqf"
+                                      <div class="mobile-carousel"
                                         style="background: transparent; --dls-basecard-padding-top:66.6667%;">
                                         <div class="card__media-container">
                                           <div class="img-middle"
